Add new functionality for work with comparator