@@ -1,23 +1,28 @@
 package services.impl;
 
 import enteties.Product;
+import enteties.impl.CustomProductComparator;
 import enteties.impl.DefaultProduct;
 import services.ProductManagementService;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-public class DefaultProductManagementService implements ProductManagementService {
+public class DefaultProductManagementService implements ProductManagementService{
     private static DefaultProductManagementService instance;
 
-    private static List<Product> products;
+    private static List<Product> products ;
+
 
     static {
         initProducts();
     }
 
     private static void initProducts() {
-        List<Product> products = List.of( new DefaultProduct(1, "Hardwood Oak Suffolk Internal Door", "Doors", 109.99),
+        products = new ArrayList<>(Arrays.asList(
+                new DefaultProduct(1, "Hardwood Oak Suffolk Internal Door", "Doors", 109.99),
                 new DefaultProduct(2, "Oregon Cottage Interior Oak Door", "Doors", 179.99),
                 new DefaultProduct(3, "Oregon Cottage Horizontal Interior White Oak Door", "Doors", 189.99),
                 new DefaultProduct(4, "4 Panel Oak Deco Interior Door", "Doors", 209.09),
@@ -26,11 +31,18 @@ public class DefaultProductManagementService implements ProductManagementService
                 new DefaultProduct(7, "Worcester 2000 25kW Ng Combi Boiler with Free Comfort+ II controller", "Boilers", 859.99),
                 new DefaultProduct(8, "Wienerberger Terca Class B Engineering Brick Red 215mm x 102.5mm x 65mm (Pack of 504)", "Bricks", 402.99),
                 new DefaultProduct(9, "Wienerberger Terca Engineering Brick Blue Perforated Class B 65mm (Pack of 400)", "Bricks", 659.99),
-                new DefaultProduct(10, "Wienerberger Engineering Brick Red Smooth Class B 73mm - Pack of 368", "Bricks", 523.99)) ;
+                new DefaultProduct(10, "Wienerberger Engineering Brick Red Smooth Class B 73mm - Pack of 368", "Bricks", 523.99)
+        ));
+
+
     }
 
     private DefaultProductManagementService() {
 
+    }
+    public void shouldSortProductsAccordingCategory(){
+        Collections.sort(getProducts(), new CustomProductComparator());
+        System.out.println(getProducts());
     }
 
     public static ProductManagementService getInstance() {
@@ -48,6 +60,6 @@ public class DefaultProductManagementService implements ProductManagementService
     @Override
     public Product getProductById(int productIdToAddToCart) {
 
-        return products.get(productIdToAddToCart);
+        return products.get(productIdToAddToCart-1);
     }
 }
